Fix broken layout on Chrome
- Remove border. border width becomes fractional figure on Chrome and
it breaks layout.
- Change width to integer without faction. Chrome doesn't handle
fraction nicely.
Confirmed on Chrome 110.0 and Firefox 110.0.

--- a/editor/common/keymap_editor.css
+++ b/editor/common/keymap_editor.css
@@ -6,25 +6,25 @@ textarea {
     font-family:monospace;
 }
 .key, .keync {
-    box-shadow:inset -3px -3px 2px 5px #ebebeb;
+    box-shadow:inset -3px -3px 3px 3px #a0a0a0;
     background-color:#ffffff;
     border-radius:6px;
-    border:2px solid #dcdcdc;
+    /* border:0px solid #dcdcdc; */
     display:inline-block;
     color:#777777;
     font-family:helvetica, arial, sans-serif;
     font-size:12px;
     font-weight:bold;
     text-decoration:none;
-    padding:4px 16px 16px 4px;
-    width: 25px;
-    height: 25px;
+    padding:6px 18px 18px 6px;
+    width: 28px;
+    height: 28px;
     overflow: hidden;
-    margin: 0px 1px 1px 0px;
+    margin: 0px 0px 0px 0px;
     white-space: normal;
 }
 .key:hover {
-    box-shadow:inset -3px -3px 2px 5px #cfcfcf;
+    box-shadow:inset -3px -3px 3px 3px #707070;
     position:relative;
 }
 .key:active {
@@ -32,87 +32,87 @@ textarea {
 .key:focus {
 }
 .key-editing {
-    box-shadow:inset -3px -3px 2px 5px #cfcfcf;
+    box-shadow:inset -3px -3px 3px 3px #707070;
     position:relative;
-    background-color:#efefef;
-    border:2px solid #7f7f7f;
+    background-color:#cfcfcf;
+    /* border:0px solid #7f7f7f; */
 }
 /* This imageless css button was generated by CSSButtonGenerator.com */
 
 /* Key unit and pixel
  *
- * key unit:    1.00    1.25    1.50    1.75    2.00 
- * width:       25      37.5    50      62.5    75
- * overall:     50      62.5    75      87.5    100
+ * key unit:    1.00    1.25    1.50    1.75    2.00
+ * overall:     52      65      78      91      104
+ * (0.25u=13px)
  *
  * Key CSS Metrics
  * +---------------------------+
  * | margin                    |
  * | +-----------------------+ |
- * | |border    2            | |
+ * | |border    0            | |
  * | | +-------------------+ | |
- * | | |padding 4          | | |
+ * | | |padding 6          | | |
  * | | | +--------------+  | | |
- * |0|2|4|width x height|16|2|1|
+ * |0|0|6|width x height|18|0|0|
  * | | | +--------------+  | | |
- * | | |        16         | | |
+ * | | |        18         | | |
  * | | +-------------------+ | |
- * | |          2            | |
+ * | |          0            | |
  * | +-----------------------+ |
- * |            1              |
+ * |            0              |
  * +---------------------------+
- * margin:1 + border:4 +  padding:20 = 25px
+ * margin:0 + border:0 +  padding:24 = 24px
  */
-.btn100 { width:25px; }     /* 50       - 25 */
-.btn125 { width:37.5px; }   /* 62.5     - 25 */
-.btn150 { width:50px; }     /* 75       - 25 */
-.btn175 { width:62.5px; }   /* 87.5     - 25 */
-.btn200 { width:75px; }     /* 100      - 25 */
-.btn225 { width:87.5px; }   /* 112.5    - 25 */
-.btn250 { width:100px; }    /* 125      - 25 */
-.btn275 { width:112.5px; }  /* 137.5    - 25 */
-.btn300 { width:125px; }    /* 150      - 25 */
-.btn325 { width:137.5px; }  /* 162.5    - 25 */
-.btn350 { width:150px; }    /* 175      - 25 */
-.btn375 { width:162.5px; }  /* 187.5    - 25 */
-.btn400 { width:175px; }    /* 200      - 25 */
-.btn425 { width:187.5px; }  /* 212.5    - 25 */
-.btn450 { width:200px; }    /* 225      - 25 */
-.btn475 { width:212.5px; }  /* 237.5    - 25 */
-.btn500 { width:225px; }    /* 250      - 25 */
-.btn525 { width:237.5px; }  /* 262.5    - 25 */
-.btn550 { width:250px; }    /* 275      - 25 */
-.btn575 { width:262.5px; }  /* 287.5    - 25 */
-.btn600 { width:275px; }    /* 300      - 25 */
-.btn625 { width:287.5px; }  /* 312.5    - 25 */
-.btn650 { width:300px; }    /* 325      - 25 */
-.btn675 { width:312.5px; }  /* 337.5    - 25 */
-.btn700 { width:325px; }    /* 350      - 25 */
-.btn725 { width:337.5px; }  /* 362.5    - 25 */
-.btn750 { width:350px; }    /* 375      - 25 */
-.btn775 { width:362.5px; }  /* 387.5    - 25 */
-.btn800 { width:375px; }    /* 400      - 25 */
-.btn825 { width:387.5px; }  /* 412.5    - 25 */
-.btn850 { width:400px; }    /* 425      - 25 */
-.btn875 { width:412.5px; }  /* 437.5    - 25 */
-.btn900 { width:425px; }    /* 450      - 25 */
-.btn925 { width:437.5px; }  /* 462.5    - 25 */
-.btn950 { width:450px; }    /* 475      - 25 */
-.btn975 { width:462.5px; }  /* 487.5    - 25 */
-.btn1000  { width:475px; }  /* 490      - 25 */
+.btn100  { width:28px  }  /* 52  - 24 */
+.btn125  { width:41px  }  /* 65  - 24 */
+.btn150  { width:54px  }  /* 78  - 24 */
+.btn175  { width:67px  }  /* 91  - 24 */
+.btn200  { width:80px  }  /* 104 - 24 */
+.btn225  { width:93px  }  /* 117 - 24 */
+.btn250  { width:106px }  /* 130 - 24 */
+.btn275  { width:119px }  /* 143 - 24 */
+.btn300  { width:132px }  /* 156 - 24 */
+.btn325  { width:145px }  /* 169 - 24 */
+.btn350  { width:158px }  /* 182 - 24 */
+.btn375  { width:171px }  /* 195 - 24 */
+.btn400  { width:184px }  /* 208 - 24 */
+.btn425  { width:197px }  /* 221 - 24 */
+.btn450  { width:210px }  /* 234 - 24 */
+.btn475  { width:223px }  /* 247 - 24 */
+.btn500  { width:236px }  /* 260 - 24 */
+.btn525  { width:249px }  /* 273 - 24 */
+.btn550  { width:262px }  /* 286 - 24 */
+.btn575  { width:275px }  /* 299 - 24 */
+.btn600  { width:288px }  /* 312 - 24 */
+.btn625  { width:301px }  /* 325 - 24 */
+.btn650  { width:314px }  /* 338 - 24 */
+.btn675  { width:327px }  /* 351 - 24 */
+.btn700  { width:340px }  /* 364 - 24 */
+.btn725  { width:353px }  /* 377 - 24 */
+.btn750  { width:366px }  /* 390 - 24 */
+.btn775  { width:379px }  /* 403 - 24 */
+.btn800  { width:392px }  /* 416 - 24 */
+.btn825  { width:405px }  /* 429 - 24 */
+.btn850  { width:418px }  /* 442 - 24 */
+.btn875  { width:431px }  /* 455 - 24 */
+.btn900  { width:444px }  /* 468 - 24 */
+.btn925  { width:457px }  /* 481 - 24 */
+.btn950  { width:470px }  /* 494 - 24 */
+.btn975  { width:483px }  /* 507 - 24 */
+.btn1000 { width:496px }  /* 520 - 24 */
 
-.spc025 { width:12.5px; visibility:hidden; padding:0; border:0; margin:0; }
-.spc050 { width:0px; visibility:hidden; }
-.spc075 { width:12.5px; visibility:hidden; }
-.spc100 { width:25px; visibility:hidden; }
-.spc125 { width:37.5px; visibility:hidden; }
-.spc150 { width:50px; visibility:hidden; }
-.spc175 { width:62.5px; visibility:hidden; }
-.spc200 { width:75px; visibility:hidden; }
-.spc225 { width:87.5px; visibility:hidden; }
-.spc250 { width:100px; visibility:hidden; }
-.spc275 { width:112.5px; visibility:hidden; }
-.spc300 { width:125px; visibility:hidden; }
+.spc025 { width:13px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc050 { width:26px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc075 { width:39px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc100 { width:52px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc125 { width:65px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc150 { width:78px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc175 { width:91px;  visibility:hidden; padding:0; border:0; margin:0; }
+.spc200 { width:104px; visibility:hidden; padding:0; border:0; margin:0; }
+.spc225 { width:117px; visibility:hidden; padding:0; border:0; margin:0; }
+.spc250 { width:130px; visibility:hidden; padding:0; border:0; margin:0; }
+.spc275 { width:143px; visibility:hidden; padding:0; border:0; margin:0; }
+.spc300 { width:156px; visibility:hidden; padding:0; border:0; margin:0; }
 
 .keyboard-row {
     width: auto;
